# startwars

./: .gitignore  Cargo.toml
backend/: .env  Cargo.toml
backend/migrations/2021-08-09-133437_create_users/: up.sql
backend/src/: lib.rs  schema.rs
backend/src/constants/: global_config.rs
backend/src/dbs/: star_wars.rs
backend/src/gql/: mod.rs  mutations.rs
backend/src/models/: character.rs
backend/src/utils/: global_config.rs
frontend-tera/: Cargo.toml
src/: common.rs  droid.rs  human.rs  lib.rs  query_root.rs  run.rs  star_wars.rs
src/constants/: global_config.rs
src/gql/: mod.rs  queries.rs
src/models/: character.rs  droid.rs  human.rs
src/services/: droid.rs  human.rs
src/typings/: common.rs  state.rs
src/utils/: global_config.rs  query_characters.rs
