[package]
name = "startwars1"
version = "0.1.0"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-actix-web = "~2.8.0"
async-graphql = "~2.8.0"
actix-web = "3.0.0"
slab = "0.4.2"
